<resources>
    <string name="app_name">Cash++</string>

    <string name="hello_world">Hello World!</string>

    <string name="nav_drawer_username">Username</string>
    <string name="nav_drawer_email">user@email</string>

    <string name="exit">Sair</string>
    <string name="categories_categories">Categorias</string>
    <string name="categories_graphics">Gráficos</string>
    <string name="summary_graphics">Gráficos</string>
    <string name="summary_entries">Lançamentos</string>
    <string name="action_about">Sobre</string>
    <string name="summary">Resumo</string>
    <string name="categories">Categorias</string>
    <string name="goals">Metas</string>
    <string name="reminders">Lembretes</string>
    <string name="settings">Configurações</string>
    <string name="title">Título</string>
    <string name="value">Valor</string>
    <string name="goal_date">Data limite para cumprir a meta</string>
    <string name="create_goal">Criar Meta</string>
    <string name="back">Voltar</string>
    <string name="type">Tipo</string>
    <string name="expense">Despesa</string>
    <string name="income">Receita</string>
    <string name="entry_date">Data da entrada</string>
    <string name="recurrence">Recorrência</string>
    <string name="recurrence_prompt">Escolhe uma recorrência</string>
    <string name="create_entry">Criar Entrada</string>
    <string name="create_category">Criar Categoria</string>
    <string name="category_prompt">Escolha uma categoria</string>
    <string name="category">Categoria</string>
    <string name="reminder_date">Data para notificação</string>
    <string name="create_reminder">Criar Lembrete</string>
    <string name="recurrence">Recorrência</string>
    <string name="recurrence_prompt">Escolha uma recorrência</string>

    <string-array name="recurrence_array">
        <item>Sem recorrência</item>
        <item>1 mês</item>
        <item>2 meses</item>
        <item>3 meses</item>
        <item>4 meses</item>
        <item>5 meses</item>
        <item>6 meses</item>
        <item>7 meses</item>
        <item>8 meses</item>
        <item>9 meses</item>
        <item>10 meses</item>
        <item>11 meses</item>
        <item>12 meses</item>
    </string-array>

    <string name="hello_blank_fragment">Hello Blank Fragment</string>

</resources>
